--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     },
     "license": "MIT",
     "dependencies": {
+        "@types/node": "^18.0.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
