--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,22 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@types/node": "^18.0.0",
+        "bcrypt": "^5.0.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.7.3",
-        "sequelize": "^6.21.1"
+        "sequelize": "^6.21.1",
+        "ts-node": "^10.8.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "nodemon": "^2.0.18"
+        "@types/cookie-parser": "^1.4.3",
+        "@types/express": "^4.17.13",
+        "@types/node": "^18.0.0",
+        "nodemon": "^2.0.18",
+        "typescript": "^4.7.4"
     }
 }
