--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
         "express": "^4.18.1",
         "express-validator": "^6.14.2",
         "jsonwebtoken": "^8.5.1",
+        "nodemailer": "^6.7.5",
         "pg": "^8.7.3",
         "sequelize": "^6.21.1",
         "ts-node": "^10.8.1",
