--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/node": "^18.0.0",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "postcss": "^8.4.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
